# payments-engine

./: .gitignore  Cargo.toml  README.md  in.csv
.github/workflows/: rust.yml
doc/payments_engine/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
doc/payments_engine/account/: enum.AccountState.html  index.html  sidebar-items.js  struct.Account.html
doc/payments_engine/amount/: index.html  struct.Amount.html
doc/payments_engine/error/: enum.Errors.html  index.html
doc/payments_engine/record/: enum.OperationType.html  index.html  sidebar-items.js  struct.Record.html
doc/payments_engine/transaction_manager/: index.html  sidebar-items.js  struct.TransactionManager.html  struct.TransactionRecord.html  type.Accounts.html  type.Transactions.html
src/: account.rs  amount.rs  error.rs  main.rs  record.rs  transaction_manager.rs
tests/: test.csv
