[package]
name = "payments-engine"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
csv = "1.1"
anyhow = "1.0"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0"
rust_decimal = "1"
rust_decimal_macros = "1"